<?xml version="1.0"?>
<package format="2">
  <name>kangaroo_driver</name>
  <version>0.0.1</version>
  <description>
    This package provides driver for the kangaroo controller.
  </description>
  <maintainer email="asilan@uga.edu">Rui Xu</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/</url>
  <author>Rui Xu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>robot_base</depend>
  <depend>pluginlib</depend>
  <export>
    <robot_base plugin="${prefix}/plugins.xml" />
  </export>
</package>